Asp change log
==============

The following is a history of changes to the Asp software, in reverse
chronological order.

Changes
-------

Version 1.2.3.6 (compiler 1.2.1.3, engine 1.2.2.5):
- Engine:
  - Added API function AspDataAddress, available only in debug builds.

Version 1.2.3.5 (compiler 1.2.1.3, engine 1.2.2.4):
- Compiler:
  - Added an option to specify the maximum code size in bytes. If the size of
    the executable would exceed this limit, an error is issued and no output
    files are generated. This is useful when the code size of the target system
    is known so that executables that would not be able to run on the target
    are not generated in the first place.

Version 1.2.3.4 (compiler 1.2.1.2, engine 1.2.2.4):
- Engine:
  - Fixed a benign coding error in the API function AspIteratorErase.
- Compiler:
  - Added a warning when script executables reach a specified percentage of the
    maximum code size, the default being 80%.
- Standalone application:
  - Included a missing header in the main module.
- General:
  - Made command line option processing more robust for all commands.

Version 1.2.3.3 (compiler 1.2.1.1, engine 1.2.2.3):
- Engine:
  - Fixed a regression introduced into API function AspStringAppend from
    version 1.2.3.0 when asserts in many API functions were replaced with
    appropriate return values to indicate calling errors. The regression caused
    the function to fail in valid conditions.

Version 1.2.3.2 (compiler 1.2.1.1, engine 1.2.2.2):
- Engine:
  - Added checks to ensure that local scope iterators (i.e., iterators created
    with the ... object) are not used outside the context in which they were
    created. Such a violation now causes the script to end in error.
  - Corrected storage of the Ellipsis object to be a singleton.
  - Fixed a memory leak in the API function AspIteratorInsert.
  - Fixed a bug that occurred when AspStoreLocal replaced an existing symbol
    entry with the same object (i.e., itself).