@@ -10,6 +10,10 @@ Changes
 Version 1.2.3.6 (compiler 1.2.1.3, engine 1.2.2.5):
 - Engine:
   - Added API function AspDataAddress, available only in debug builds.
+- Build:
+  - Added a "-d" suffix to the file names of debug versions of the libraries
+    and standalone application.
+  - Added more strict compile diagnostics when using the GNU toolset.
 
 Version 1.2.3.5 (compiler 1.2.1.3, engine 1.2.2.4):
 - Compiler:
